# cobolio

./: .coveragerc  .gitignore  LICENSE.md  README.md  README.rst  setup.cfg
.github/workflows/: build.yml  docs.yml
docs/source/: api.rst  cli.rst  conf.py  contributing.rst  index.rst  license.rst
src/cobolio/: CopybookParser.py  CopybookTokenizer.py  __init__.py  cobdata_to_csv.py  config.py  parser.py
src/cobolio/cli/: __init__.py  cob_to_csv.py
tests/: test_cobdata_to_csv.py  test_parser.py
tests/cli/: test_cob_to_csv.py
