[bumpversion]
current_version = 0.1.0
tag = True
commit = True
tag_name = v{new_version}

[metadata]
name = cobolio
version = attr: cobolio.__version__
url = https://github.com/adelosa/cobolio
author = Anthony Delosa
author_email = adelosa@gmail.com
license = MIT
description = 'Package for working with mainframe COBOL files'
long_description = file: README.rst LICENSE
include_package_data = True
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.extras_require]
docs = 
	sphinx
	sphinx_rtd_theme
test =
	flake8
	pytest
	bump2version
	coverage

[options.entry_points]
console_scripts = 
	cob_to_csv = cobolio.cli.cob_to_csv:cli_entry

[flake8]
max-line-length = 120
exclude = 
	.git,
	.pytest_cache,
	__pycache__,
	build,
	dist
	venv*

[bumpversion:file:src/cobolio/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[tool:pytest]
junit_family = xunit2
